--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 cloudFlareAccount=b34aad77a0649956f636aabd25654a21
 cloudFlareToken=126696776eccea97c410b5b001deafebf6bdd
+mongodbPassword=XmyABqJdssCfKqib
