--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.2.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tus-js-client": "^2.3.1",
+    "use-tus": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "8.11.0",
