--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cloudflare/stream-react": "^1.6.1",
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "mongoose": "^6.2.7",
     "next": "12.1.0",
     "react": "17.0.2",
