--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@cloudflare/stream-react": "^1.6.1",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "next": "12.1.0",
     "react": "17.0.2",
