--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.7",
     "next": "12.1.0",
     "react": "17.0.2",
