--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "^6.2.2",
     "request": "^2.88.2",
+    "swiper": "^8.1.0",
     "tus-js-client": "^2.3.1",
     "use-tus": "^0.5.0"
   },
