--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.2",
+    "gsap": "^3.10.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.7",
