--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "^6.2.2",
     "request": "^2.88.2",
+    "request-ip": "^2.1.3",
     "swiper": "^8.1.0",
     "tus-js-client": "^2.3.1",
     "use-tus": "^0.5.0"
